--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,20 @@
-.output-frame{
+body{
+  font-family:arial;
+  background:#0f0f0f;
+  color:white;
+  text-align:center;
+}
+.outBox{
   width:640px;
   height:480px;
-  border:3px solid #17a2b8;
+  margin:auto;
+  border:2px solid #55aaff;
   border-radius:6px;
   overflow:hidden;
-  background:#000;
+}
+button{
+  margin:5px;
+  padding:8px 20px;
+  font-size:16px;
+  cursor:pointer;
 }
