--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
   font-family:arial;
-  background:#0f0f0f;
+  background:#ffffff;
   color:white;
   text-align:center;
 }
@@ -18,3 +18,4 @@ button{
   font-size:16px;
   cursor:pointer;
 }
+
